✨ 支持 JDK8+, SpringBoot 2.7+